--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,58 @@ CSS COMMUN
 
 
 /* Styles généraux */
+/* Conteneur principal */
+#Logo {
+    display: inline-block;
+    text-decoration: none;
+    position: fixed; /* Fixe l'élément sur l'écran */
+    top: 20px;       /* Ajuste la position verticale */
+    left: 20px;      /* Ajuste la position horizontale */
+    z-index: 1000;   /* Place le logo au-dessus des autres éléments */
+}
+
+/* Style pour la boîte contenant le texte */
+.logo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 80px;
+    height: 80px;
+    background: linear-gradient(45deg, #1e90ff, #ff1493);
+    border-radius: 50%;
+    border: 4px solid black;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+/* Texte à l'intérieur du logo */
+.logo .line {
+    color: white;
+    font-family: "Bad Script", cursive;
+    font-size: 1rem;
+    text-align: center;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+}
+
+/* Effet au survol */
+#Logo:hover .logo {
+    transform: scale(1.1);
+    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.5);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -229,6 +281,33 @@ header h2 {
 /*******************************
 CSS MAIN
 *******************************/
+
+/*------------------mobile about-me-section-----------------*/
+#about-m-section {
+  min-height: 100vh;
+}
+
+#about-m-section .container {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+#about-m-section .card {
+  border: 0.5px solid black;
+  box-shadow: 0px 0px 10px black;
+  border-radius: 10px;
+  margin: 0px 10px;
+}
+
+#about-m-section .img-div {
+  min-width: 50px;
+  min-height: 50px;
+  border-radius: 10px;
+}
+
+#about-m-section img 
+
+
 /* Section: About Me */
 #about-me-section {
     min-height: 100vh;
@@ -428,4 +507,20 @@ CSS EXPÉRIENCES PROFESSIONNELLES
     position: absolute;
     left: 0;
     top: 0;
+}
+
+ .map-div {
+  padding: 20px;
+  height: 60vh;
+}
+
+ .map-div iframe {
+  width: 100%;
+  height: 100%;
+}
+
+footer {
+  text-align: center;
+  color: white;
+  padding: 1.1rem;
 }
