--- a/public/css/style.css
+++ b/public/css/style.css
@@ -524,3 +524,8 @@ footer {
   color: white;
   padding: 1.1rem;
 }
+
+.custom-text-size {
+    font-size: 1.6rem; /* Ajustez selon vos besoins */
+}
+
