--- a/public/css/style.css
+++ b/public/css/style.css
@@ -433,7 +433,7 @@ ul li::before {
 }
 
 #review-section .container {
-  display: grid;
+  display: flex;
   grid-template-columns: 1fr;
   grid-gap: 10px;
 }
@@ -734,3 +734,29 @@ footer {
     font-size: 0.9rem;
     color: #666;
 }
+
+
+
+  /* nav .nav_list {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 60%;
+  } */
+
+  nav .nav_list a {
+    transition: 2s;
+    border-bottom: 0px solid transparent;
+  }
+
+  nav .nav_list a:hover {
+    margin-left: 10px;
+    font-size: 1.6rem;
+    border-bottom: 1px solid red;
+    transition: 1s;
+  }
+
+  .nav-scrolling-active {
+    background: rgba(3, 3, 107, 0.815);
+    transition: 1s;
+  }
